aws_eip.tf
# At this point, this is not necesary and it might generate extra costs
#
# //Elastic  IP for NATGateway 
# resource "aws_eip" "ElasticIP"{
#   vpc = true
#   tags = {
#     Name = "ElasticIP"
#   }
# }
