aws_instance_metasploitable3.tf


//Vulnerable Instance: Tobedefined
resource "aws_instance" "metasploitable3" {
  count         = var.deploment-control["metasploitable3"]    // control variable from variables.tf

  ami           = var.metasploitable3-ami[var.aws-region] 
  instance_type = "t2.micro"
  #key_name      = "key12345"
  private_ip    = "10.0.1.5"
  subnet_id                   = aws_subnet.privateSubnet.id
  vpc_security_group_ids = [aws_security_group.SecurityGroup-VulnerableMachines.id]
  tags = {
    Name = "metasploitable3"
  }

  depends_on = [
    aws_vpc.VPC,
    aws_subnet.privateSubnet,
    aws_route_table.PublicRouteTable,
    aws_security_group.SecurityGroup-VulnerableMachines
  ]

}
