aws_nat_gateway.tf

# //NAT Gateway -- deshabilitado, por no estar incluido en el free tier
# resource "aws_nat_gateway" "NATGateway" {
#   allocation_id = aws_eip.ElasticIP.id
#   subnet_id     = aws_subnet.publicSubnet.id
#   tags = {
#     Name = "NATGateway"
#   }
# }

# // Route Table for NAT
# resource "aws_route_table" "NATRouteTable" {
#   vpc_id = aws_vpc.VPC.id
#   route {
#     cidr_block = "0.0.0.0/0"
#     gateway_id = aws_nat_gateway.NATGateway.id
#   }
# }
//Association with Private subnet
#resource "aws_route_table_association" "privateAssociation" {
#  subnet_id      = aws_subnet.privateSubnet.id
#  route_table_id = aws_route_table.NATRouteTable.id
#}
